# python_container

./: .env  .gitignore  Dockerfile  README.md  __main__.py  docker-compose.yaml  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose_develop.yaml  docker-compose_develop.yml
python_base/: hello.py
